--- a/src/plugin.css
+++ b/src/plugin.css
@@ -1,11 +1,12 @@
-/*
- * docsify-plugin-footer/plugin.js REL_VER_NUMBER
+/**
+ * @license
+ *
+ * docsify-plugin-footer/plugin.css REL_VER_NUMBER
  * (https://github.com/Sujaykumarh/docsify-plugin-footer/)
  *
  * Copyright (c) 2021 Sujaykumar.Hublikar <hello@sujaykumarh.com>
  * Github (@sujaykumarh)
  *
- * @license
  * Licensed under Apache License, Version 2.0
  */
 
